<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/fragment1">

    <fragment
        android:id="@+id/fragment1"
        android:name="com.example.lab04_4_Fragments.Fragment1"
        android:label="fragment_1"
        tools:layout="@layout/fragment_1" >
        <action
            android:id="@+id/action_fragment1_to_fragment2"
            app:destination="@id/fragment2" />
    </fragment>
    <fragment
        android:id="@+id/fragment2"
        android:name="com.example.lab04_4_Fragments.Fragment2"
        android:label="fragment_2"
        tools:layout="@layout/fragment_2" >
        <action
            android:id="@+id/action_fragment2_to_fragment1"
            app:destination="@id/fragment1"
            app:popUpTo="@id/fragment1"
            app:popUpToInclusive="true" />
        <action
            android:id="@+id/action_fragment2_to_fragment3"
            app:destination="@id/fragment3" />
    </fragment>
    <fragment
        android:id="@+id/fragment3"
        android:name="com.example.lab04_4_Fragments.Fragment3"
        android:label="fragment_3"
        tools:layout="@layout/fragment_3" >
        <action
            android:id="@+id/action_fragment3_to_fragment2"
            app:destination="@id/fragment2"
            app:popUpTo="@id/fragment2"
            app:popUpToInclusive="true" />
        <action
            android:id="@+id/action_fragment3_to_fragment1"
            app:destination="@id/fragment1"
            app:popUpTo="@id/fragment1"
            app:popUpToInclusive="true" />
    </fragment>
    <activity
        android:id="@+id/activity_about"
        android:name="com.example.lab04_4_Fragments.ActivityAbout"
        android:label="activity_about"
        tools:layout="@layout/activity_about" />
</navigation>