...
    android:id="@+id/fragment2" >

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <Button
            android:id="@+id/bnToThird"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn2third"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/bnToFirst"
            app:layout_constraintVertical_bias="0.087" />

        <TextView
            android:id="@+id/name_second"
            android:layout_width="wrap_content"
            android:layout_height="25dp"
...
